--- a/src/app/Components/Medical Performa/generate-performa/generate-performa.component.html
+++ b/src/app/Components/Medical Performa/generate-performa/generate-performa.component.html
@@ -288,8 +288,7 @@
     </div>
     <div class="text-right">
       <div *ngIf="(clientQuestions!=null) && (expertQuestions!=null)">
-        <button type="submit" class="btn pink-gradient text-uppercase pr-3"><i
-            class="material-icons">add</i>
+        <button type="submit" class="btn pink-gradient text-uppercase pr-3 mt-5">
           <span class="text-hide-xs mr-1">Save</span></button>
       </div>
     </div>
