user creation + user role creation complete

--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -18,8 +18,13 @@
                     class="material-icons icon arrow">expand_more</i></a>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a [routerLink]="['/Users/User']" class="nav-link pink-gradient-active"><i
-                            class="material-icons icon"></i><span>Add New</span></a>
+                    <a [routerLink]="['/Users/create-user']" class="nav-link pink-gradient-active"><i class="material-icons icon"></i><span>Add
+                            New User</span></a>
+                            <a [routerLink]="['/Users/new-user-role']" class="nav-link pink-gradient-active"><i class="material-icons icon"></i><span>
+                                Add New Role</span></a>
+                    <a [routerLink]="['/Users/user-roles']" class="nav-link pink-gradient-active"><i class="material-icons icon"></i><span>
+                            User Roles</span></a>
+                                
                     <a [routerLink]="['/Users/Group']" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>Group</span></a>
                     <a [routerLink]="['/Users/SecurityQuestion']" class="nav-link pink-gradient-active"><i
