implement menu settings board

--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -40,6 +40,9 @@
                             Screen</span></a>
                     <a [routerLink]="['/Users/ApplicationScreenObject']" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>App. Screen Object</span></a>
+                    <a [routerLink]="['/Users/menu-settings']" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>Menu Settings</span></a>
+                                
                 </li>
             </ul>
         </li>
